--- a/examples/linprog2d_interactive.html
+++ b/examples/linprog2d_interactive.html
@@ -42,13 +42,17 @@
 
 		header {
 			padding: 0 1rem 1rem 1rem;
+			background-color: #efefef;
 		}
 
 		svg {
 			width: 100%;
 			height: 100%;
-			background-color: #efefef;
 			cursor: crosshair;
+		}
+
+		svg > * {
+			pointer-events: none;
 		}
 
 		svg line {
@@ -66,7 +70,7 @@
 		}
 
 		svg line.ceil {
-			stroke: red;
+			stroke: orange;
 		}
 
 		svg line.floor {
@@ -86,7 +90,7 @@
 		}
 
 		svg polygon.ceil {
-			fill: #990000;
+			fill: #996600;
 		}
 
 		svg polygon.floor {
@@ -103,10 +107,9 @@
 	<div class="wrapper">
 		<header>
 			<h1>Linprog2D JavaScript Example</h1>
-			<p><strong>Instructions:</strong> Click three times on the surface below to place a constraint: two times to determine the start and end point, and a third time to specify the feasible region. The <em>infeasible</em> region is shaded. Hold shift to snap angles.</p>
-			<p>Click "Solve" to compute point with the minimum feasible <i>y</i>-coordinate.</p>
+			<p><strong>Instructions:</strong> Click three times on the surface below to place a constraint: two times to determine direction, and a third time to specify the location of the feasible region. The <em>infeasible</em> region is shaded. Hold shift to allow arbitrary angles while drawing.</p>
 			<p id="msg">&nbsp;</p>
-			<button id="btn_solve">Solve</button><button id="btn_reset">Reset</button><button id="btn_undo">Undo</button>
+			<button id="btn_reset">Reset</button><button id="btn_undo">Undo</button>
 		</header>
 		<svg id="surface"></svg>
 	</div>
@@ -124,10 +127,8 @@ function solve() {
 		/* Solve the problem. y-axis is displayed inverted, so maximize y instead
 		   of minimising. */
 		solution = solve(0, -1, Gx, Gy, h);
-		console.log(solution);
 
 		/* Print a message */
-		let p_msg = document.getElementById('msg');
 		switch (solution.status) {
 			case linprog2d.ERROR:
 				p_msg.innerText = 'Error while solving. This should not happen.';
@@ -166,6 +167,7 @@ let aux_line = null;
 let state = STATE_NONE;
 let x0, y0, x1, y1;
 
+const p_msg = document.getElementById('msg');
 const btn_solve = document.getElementById("btn_solve");
 const btn_reset = document.getElementById("btn_reset");
 const btn_undo = document.getElementById("btn_undo");
@@ -174,6 +176,7 @@ const svg_surface = document.getElementById("surface");
 function reset() {
 	Gx = [], Gy = [], h = [];
 	state = STATE_NONE;
+	p_msg.innerHtml = '&nbsp;';
 	solution = null;
 	repaint();
 }
@@ -187,7 +190,7 @@ function undo() {
 		h = h.slice(0, n - 1);
 	}
 	state = STATE_NONE;
-	solution = null;
+	solve();
 	repaint();
 }
 
@@ -316,7 +319,7 @@ function snap_to_angle(x0, y0, x, y) {
 	let dx = x - x0, dy = y - y0;
 	let angle = Math.atan2(dy, dx);
 	let len = Math.sqrt(dx * dx + dy * dy);
-	let angle_snapped = Math.round(angle / (Math.PI * 0.125)) * (Math.PI * 0.125);
+	let angle_snapped = Math.round(angle / (Math.PI / 16.0)) * (Math.PI / 16.0);
 	return [x0 + Math.cos(angle_snapped) * len, y0 + Math.sin(angle_snapped) * len];
 }
 
@@ -335,7 +338,7 @@ function surface_click(e) {
 			svg_surface.appendChild(aux_line);
 			break;
 		case STATE_PLACE_LINE_ENDPOINT:
-			if (e.shiftKey) {
+			if (!e.shiftKey) {
 				[x, y] = snap_to_angle(x0, y0, x, y);
 			}
 
@@ -361,7 +364,7 @@ function surface_click(e) {
 				repaint();
 				state = STATE_PLACE_DIR;
 				surface_mouse_move(e); /* Update direction */
-				repaint();
+				solve();
 			} else {
 				state = STATE_NONE;
 			}
@@ -376,7 +379,7 @@ function surface_mouse_move(e) {
 	let [x, y] = client_to_viewport(e);
 	switch (state) {
 		case STATE_PLACE_LINE_ENDPOINT:
-			if (e.shiftKey) {
+			if (!e.shiftKey) {
 				[x, y] = snap_to_angle(x0, y0, x, y);
 			}
 			aux_line.setAttribute('x2', x);
@@ -394,7 +397,7 @@ function surface_mouse_move(e) {
 				Gx[i] *= -1.0;
 				Gy[i] *= -1.0;
 				h[i] *= -1.0;
-				repaint();
+				solve();
 			}
 			break;
 	}
@@ -413,7 +416,6 @@ function surface_key_press(e) {
 }
 
 /* Register event listeners */
-btn_solve.addEventListener('click', solve);
 btn_reset.addEventListener('click', reset);
 btn_undo.addEventListener('click', undo);
 svg_surface.addEventListener('click', surface_click);
