--- a/examples/linprog2d_interactive.html
+++ b/examples/linprog2d_interactive.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
- *  linprog2d --- Two-dimensional linear programming solver
+ *  linprog2d -- Two-dimensional linear programming solver
  *  Copyright (C) 2018 Andreas Stöckel
  *
  *  This program is free software: you can redistribute it and/or modify
