Better description in the HTML

--- a/examples/linprog2d_interactive.html
+++ b/examples/linprog2d_interactive.html
@@ -107,7 +107,7 @@
 	<div class="wrapper">
 		<header>
 			<h1>Linprog2D JavaScript Example</h1>
-			<p><strong>Instructions:</strong> Click three times on the surface below to place a constraint: two times to determine location and direction, and a third time to specify the location of the feasible region (e.g. left or right of the line). The <em>infeasible</em> region is shaded. Hold shift for arbitrary angles while drawing.</p>
+			<p><strong>Instructions:</strong> Click three times on the surface below to place a constraint: two times to determine location and direction, and a third time to specify the location of the feasible region (e.g. left or right of the line). The <em>infeasible</em> region is shaded. Hold shift for arbitrary angles while drawing. This example minimizes for the lowest point (or line) that fulfills the specified constraints.</p>
 			<p id="msg">&nbsp;</p>
 			<button id="btn_reset">Reset</button><button id="btn_undo">Undo</button>
 		</header>
